<package format="2">
  <name>mav_trajectory_generation</name>
  <version>0.0.1</version>
  <description>Polynomial trajectory generation for MAVs.</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen_vendor</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>glog_vendor</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>nlopt_vendor</build_depend>
  <build_depend>yaml_cpp_vendor</build_depend>

  <exec_depend>eigen_vendor</exec_depend>
  <exec_depend>eigen_checks</exec_depend>
  <exec_depend>glog_vendor</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>nlopt_vendor</exec_depend> 
  <exec_depend>yaml_cpp_vendor</exec_depend>
  
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
