<?xml version="1.0"?>
<package format="2">
  <name>mav_trajectory_generation_ros</name>
  <version>0.0.0</version>
  <description>ROS bindings for sampling, visualizing, and doing whatever with polynomial trajectories for MAVs.</description>

  <author email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</author>
  <author email="michael.burri@mavt.ethz.ch">Michael Burri</author>
  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="brik@ethz.ch">Rik Bähnemann</author>
  <author email="mpopovic@ethz.ch">Marija Popovic</author>

  <maintainer email="brik@ethz.ch">Rik Bähnemann</maintainer>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen_vendor</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>mav_trajectory_generation</build_depend>
  <build_depend>mav_visualization</build_depend>
  <build_depend>mav_planning_msgs</build_depend>
  <build_depend>eigen_checks</build_depend>
  <build_depend>rclcpp</build_depend>

  <exec_depend>eigen_vendor</exec_depend>
  <exec_depend>mav_msgs</exec_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>
  <exec_depend>mav_visualization</exec_depend>
  <exec_depend>mav_planning_msgs</exec_depend>
  <exec_depend>eigen_checks</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
